examples/test/testpolicy1808.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1808
  namespace: namespace456
spec:
  podSelector:
    matchLabels:
      key23: value38
      key46: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value3
      podSelector:
        matchLabels:
          key9: value4
          key1: value25
          key32: value7
